<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:orientation="vertical">




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.333"
                android:id="@+id/relative_delete">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:fontFamily="@font/behdad"
                    android:textColor="#2f2f2f"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:layout_marginRight="8dp"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"/>

                <ImageView
                    android:layout_alignParentRight="false"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_delete"
                    />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gary300" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.333"
                android:id="@+id/relative_share">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:fontFamily="@font/behdad"
                    android:textColor="#2f2f2f"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:layout_marginRight="8dp"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"/>

                <ImageView
                    android:layout_alignParentRight="false"
                    android:padding="8dp"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_share"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gary300" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.333"
                android:id="@+id/relative_rename">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:fontFamily="@font/behdad"
                    android:textColor="#2f2f2f"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:layout_marginRight="8dp"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"/>

                <ImageView
                    android:layout_alignParentRight="false"
                    android:padding="8dp"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_edit"
                    />

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>